--- a/project2/templates/layout.html
+++ b/project2/templates/layout.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} {% endblock title %}</title>
+    <title>Flack | {% block title %} {% endblock title %}</title>
+    <!-- Icon link -->
+    <link rel="icon" href="{{ url_for('static', filename='img/bubble-message.png') }}"type="image/x-icon">
+    {% block head %} {% endblock head %}
     <!-- Static files CSS -->
     <link rel="stylesheet" href="{{ url_for ('static', filename='css/base.css') }}">
     <!-- Bootstrap 4 CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
-<body>
+
+<body id="body">
+    <!-- Alert Messages -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% for type, message in messages %}
+        <div class="alert alert-{{ type }}">
+            {{ message }}
+        </div>
+        {% endfor %}
+    {% endwith %}
+
     {% block body %} {% endblock body %}
 </body>
+
 </html>
