--- a/project2/templates/main/home.html
+++ b/project2/templates/main/home.html
@@ -5,12 +5,20 @@
 {% endblock title %}
 
 {% block body %}
-    <div class="container">
-        <div class="card">
-            <div class="container">
-                <div class="card-body">
-                    <p class="card-title">Login</p>
-                </div>
+    <div class="container center">
+        <div class="card p-2">
+            <div class="card-body text-center">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 172 172" style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#f1c40f"><path d="M86,20.64c39.82875,0 72.24,27.76188 72.24,61.89313c0,34.13125 -32.41125,61.90656 -72.24,61.90656c-6.08719,0 -12.01312,-0.69875 -18.11375,-2.12312l-4.07156,-0.95406l-2.72781,3.17125c-2.35156,2.75469 -10.25281,10.84406 -23.28719,13.115c2.48594,-4.48812 4.36719,-9.05687 5.60344,-13.62562c0.95406,-3.56094 1.12875,-5.42875 1.1825,-7.05469l0.16125,-3.84312l-3.18469,-2.15c-17.67031,-11.94594 -27.80219,-29.60281 -27.80219,-48.44219c0,-34.13125 32.41125,-61.89313 72.24,-61.89313M86,13.76c-43.59125,0 -79.12,30.54344 -79.12,68.77313c0,22.19875 12.1475,41.52187 30.82563,54.13969c-0.02688,0.73906 0.02687,1.94844 -0.95406,5.54969c-1.19594,4.47469 -3.64156,10.76344 -8.58656,17.85844l-3.52062,5.03906h6.14094c21.29844,0 33.62062,-13.88094 35.52875,-16.11156c6.3425,1.49156 12.87312,2.31125 19.68594,2.31125c43.59125,0 79.12,-30.54344 79.12,-68.78656c0,-38.22969 -35.52875,-68.77313 -79.12,-68.77313z"></path></g></g></svg>
+                <h4 class="card-title text-center mt-2">Login</h4>
+                <form action="/chat" method="post">
+                    <div class="input-group input-group-sm mb-3 div-input">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text" id="basic-addon1">@</span>
+                        </div>
+                        <input type="text" name="username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" autocomplete="off" autofocus>
+                    </div>
+                    <input type="submit" class="btn btn-warning">
+                </form>
             </div>
         </div>
     </div>
