--- a/project2/static/css/base.css
+++ b/project2/static/css/base.css
@@ -20,7 +20,7 @@
   width: 40%;
 }
 .card .card-body {
-  background-color: rgba(15, 199, 92, 0.7);
+  background-color: #12d493;
 }
 
 .div-input {
@@ -29,6 +29,28 @@
 .div-input span {
   background-color: #eec408;
   font-weight: bold;
+}
+
+/* scrollbar width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* scrollbar Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* scrollbar Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(247, 250, 250, 0.7);
+  border-radius: 10px;
+}
+
+/* scrollbar Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #f7fafa;
 }
 
 /*# sourceMappingURL=base.css.map */
