--- a/project2/static/css/base.scss
+++ b/project2/static/css/base.scss
@@ -1,38 +1,59 @@
-$color-primary: rgba(15, 199, 92, 0.7);
+$color-primary: rgb(18, 212, 147);
+$color-primary-soft: rgba(18, 212, 147, .5);
 $color-secondary: rgb(238, 196, 8);
 
 #body {
-    background-color: #0f0627;
+  background-color: #0f0627;
 }
 
 .center {
-    display: flex;
-    justify-content: center;
-    margin-top: 6rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 6rem;
 }
-
 
 .alert {
-    margin: auto;
-    display: block;
-    width: 50%;
-    text-align: center;
-    margin-top: 3rem;
+  margin: auto;
+  display: block;
+  width: 50%;
+  text-align: center;
+  margin-top: 3rem;
 }
 
-
 .card {
-    width: 40%;
-    .card-body {
-        background-color: $color-primary;
-    }
+  width: 40%;
+  .card-body {
+    background-color: $color-primary;
+  }
 }
 
 .div-input {
-    padding: 10px;
+  padding: 10px;
 
-    span {
-        background-color: $color-secondary;
-        font-weight: bold;
-    }        
+  span {
+    background-color: $color-secondary;
+    font-weight: bold;
+  }
+}
+
+/* scrollbar width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* scrollbar Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* scrollbar Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(247, 250, 250, 0.7);
+  border-radius: 10px;
+}
+
+/* scrollbar Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(247, 250, 250, 1);
 }
