--- a/project2/static/css/chat.css
+++ b/project2/static/css/chat.css
@@ -20,7 +20,7 @@
   width: 40%;
 }
 .card .card-body {
-  background-color: rgba(15, 199, 92, 0.7);
+  background-color: #12d493;
 }
 
 .div-input {
@@ -31,26 +31,120 @@
   font-weight: bold;
 }
 
+/* scrollbar width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* scrollbar Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* scrollbar Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(247, 250, 250, 0.7);
+  border-radius: 10px;
+}
+
+/* scrollbar Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #f7fafa;
+}
+
 #chat-main-div {
-  padding: 3rem;
+  padding: 1rem;
   border: 2px solid #eec408;
-  background-color: rgba(15, 199, 92, 0.7);
+  background-color: #12d493;
+  margin: 2vh 2vw 2vh 2vw;
 }
 #chat-main-div .col {
   border: 1px solid #eec408;
   overflow: hidden;
 }
-#chat-main-div .col .chat-titles {
-  font-size: 2.5vw;
-  font-weight: bold;
-  font-style: italic;
+#chat-main-div .col .chat-div-titles {
+  border-bottom: 1px solid #eec408;
+  margin-bottom: 10px;
 }
-#chat-main-div .col hr {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  left: 0;
-  background-color: #eec408;
+#chat-main-div .col .chat-div-titles .chat-titles {
+  font: bold italic small-caps 2.5vw "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin: 2vh 0 0 0;
+}
+#chat-main-div .col #chat-div-chat #chat-div-messages {
+  background-color: #e0f1f1;
+  margin: 2vh 0 0 0;
+  padding: 0;
+  max-width: 100%;
+}
+#chat-main-div .col #chat-div-chat #chat-div-messages #chat-div-messages-inside {
+  padding: 2vh 1.5vw 2vh 1.5vw;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  overscroll-behavior: smooth;
+  height: 68vh;
+  max-width: 100%;
+}
+#chat-main-div .col #chat-div-chat #chat-div-messages #chat-div-messages-inside .div-message {
+  margin-top: 0.5vh;
+}
+#chat-main-div .col #chat-div-chat #chat-div-messages #chat-div-messages-inside .div-message .message-div-text {
+  max-width: 60%;
+  background-color: rgba(181, 168, 214, 0.774);
+  padding: 1vh 1vw 0.8vh 1vw;
+}
+#chat-main-div .col #chat-div-chat #chat-div-messages #chat-div-messages-inside .div-message .message-div-text .title-author-message {
+  font: italic bold 1.2vw Georgia, serif;
+  margin: 0;
+}
+#chat-main-div .col #chat-div-chat #chat-div-messages #chat-div-messages-inside .div-message .message-div-text .message-content-text {
+  font: 1vw Georgia, serif;
+  margin: 0;
+  overflow-wrap: break-word;
+}
+#chat-main-div .col #chat-div-chat #chat-div-submit {
+  background-color: rgba(181, 168, 214, 0.774);
+}
+#chat-main-div .col #chat-div-chat #chat-div-submit #input-message {
+  font-size: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: inherit;
+  border: 0;
+  padding: 1%;
+}
+#chat-main-div .col #chat-div-chat #chat-div-submit #btn-submit-msg {
+  overflow: hidden;
+  background-color: inherit;
+}
+#chat-main-div .col #chat-div-chat #chat-div-submit #btn-submit-msg img {
+  width: 50%;
+  height: 50%;
+}
+#chat-main-div .col #chat-div-users {
+  height: 90%;
+}
+#chat-main-div .col #chat-div-users #chat-div-users-inside {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  overscroll-behavior: smooth;
+  background-color: #ffffff;
+  height: inherit;
+}
+#chat-main-div .col #chat-div-users #chat-div-users-inside .div-user {
+  background-color: #ffffff;
+  border: 1px solid grey;
+}
+#chat-main-div .col #chat-div-users #chat-div-users-inside .div-user :hover {
+  cursor: pointer;
+  background-color: rgba(18, 212, 147, 0.5);
+}
+#chat-main-div .col #chat-div-users #chat-div-users-inside .div-user .p-user-title {
+  font-size: 1.6vw;
+  margin: 0;
 }
 
 /*# sourceMappingURL=chat.css.map */
