Improved ./models/chat.py and ./routes/chat.py in order to make follow MVC style and ./static/js/chat.js changing sessionStorage due to the former

--- a/project2/templates/layout.html
+++ b/project2/templates/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flack | {% block title %} {% endblock title %}</title>
+    <title>Flat | {% block title %} {% endblock title %}</title>
     <!-- Icon link -->
     <link rel="icon" href="{{ url_for('static', filename='img/bubble-message.png') }}"type="image/x-icon">
     {% block head %} {% endblock head %}
