Username in ./templates/logged/chat.html now is visible

--- a/project2/templates/logged/chat.html
+++ b/project2/templates/logged/chat.html
@@ -16,7 +16,7 @@ Chat
                 <div class="row">
                     <div class="col col-12 col-lg-10 col-md-10 col-sm-12 col-xs-12">
                         <div class="chat-div-titles">
-                            <p class="chat-titles">{{ session.username }}</p>
+                            <p class="chat-titles">{{ username }}</p>
                         </div>
                         <div id="chat-div-chat">
                             <div id="chat-div-messages" class="jumbotron">
