--- a/project2/templates/logged/chat.html
+++ b/project2/templates/logged/chat.html
@@ -54,7 +54,7 @@ Chat
                     </div>
                     <div class="col col-12 col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <div class="chat-div-titles">
-                            <p class="chat-titles">Users</p>
+                            <p class="chat-titles">Contacts</p>
                         </div>
                         <div id="chat-div-users">
                             <div id="chat-div-users-inside">
