--- a/project2/static/css/base.scss
+++ b/project2/static/css/base.scss
@@ -1,9 +1,10 @@
+$body-color: #0f0627;
 $color-primary: rgb(18, 212, 147);
 $color-primary-soft: rgba(18, 212, 147, .5);
 $color-secondary: rgb(238, 196, 8);
 
 #body {
-  background-color: #0f0627;
+  background-color: $body-color;
 }
 
 .center {
