Modified search users, but does not work perfectly, usernames sometimes are repeated twice.

--- a/project2/static/css/chat.scss
+++ b/project2/static/css/chat.scss
@@ -76,7 +76,7 @@ $color-div-user-active: base.$color-primary-soft;
             }
         
             #chat-div-submit {
-                background-color: $color-submit-message;
+                background-color: $color-chat-message;
                 visibility: hidden;
 
                 #input-message {
