--- a/project2/templates/logged/chat.html
+++ b/project2/templates/logged/chat.html
@@ -30,8 +30,9 @@ Chat
                                     </button>
                                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                                         <div class="navbar-nav">
-                                            <a class="nav-item nav-link active" href="#">Options <span class="sr-only">(current)</span></a>
-                                            <a class="nav-item nav-link" href="#">Features</a>
+                                            <!-- <a class="nav-item nav-link active" href="#">Search users<span class="sr-only">(current)</span></a> -->
+                                            <input id="input-search-users" class="form-control m-2" type="search" list="list-users" placeholder="Search users" aria-label="Search" autocomplete="off">
+                                            <datalist id="list-users"></datalist>
                                         </div>
                                     </div>
                                 </nav>
