The search input works fine. Now I will allow that the user can touch a found user and chat with him or her.

--- a/project2/static/css/base.css
+++ b/project2/static/css/base.css
@@ -31,6 +31,16 @@
   font-weight: bold;
 }
 
+.navbar-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.navbar-container .div-input-search {
+  width: 40%;
+}
+
 /* scrollbar width */
 ::-webkit-scrollbar {
   width: 12px;
