Search user input moved to the right and when a user is selected a function is called (showUserData()).

--- a/project2/static/css/base.css
+++ b/project2/static/css/base.css
@@ -1,5 +1,6 @@
 #body {
   background-color: #0f0627;
+  font-family: fantasy;
 }
 
 .center {
@@ -37,8 +38,9 @@
   flex-direction: row;
   justify-content: flex-end;
 }
-.navbar-container .div-input-search {
-  width: 40%;
+
+.div-input-search {
+  width: 25%;
 }
 
 /* scrollbar width */
