--- a/project2/templates/logged/chat.html
+++ b/project2/templates/logged/chat.html
@@ -31,7 +31,7 @@ Chat
                                         <div class="navbar-nav navbar-container">
                                             <!-- <a class="nav-item nav-link active" href="#">Search users<span class="sr-only">(current)</span></a> -->
                                             <div class="div-input-search">
-                                                <input id="input-search-users" class="form-control m-2 input-search" type="search" list="list-users" placeholder="Search users" aria-label="Search" autocomplete="off">
+                                                <input id="input-search-users" class="form-control m-2 input-search" type="search" list="list-users" placeholder="Search friends!" aria-label="Search" autocomplete="off">
                                                 <datalist id="list-users"></datalist>
                                             </div>
                                         </div>
