--- a/project2/static/css/base.scss
+++ b/project2/static/css/base.scss
@@ -5,6 +5,7 @@ $color-secondary: rgb(238, 196, 8);
 
 #body {
     background-color: $body-color;
+    font-family: fantasy;
 }
 
 .center {
@@ -42,10 +43,10 @@ $color-secondary: rgb(238, 196, 8);
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    
-    .div-input-search {
-        width: 40%;
-    }
+}
+
+.div-input-search {
+  width: 25%;
 }
 
 /* scrollbar width */
