--- a/project2/static/css/chat.css
+++ b/project2/static/css/chat.css
@@ -1,5 +1,6 @@
 #body {
   background-color: #0f0627;
+  font-family: fantasy;
 }
 
 .center {
@@ -29,6 +30,16 @@
 .div-input span {
   background-color: #eec408;
   font-weight: bold;
+}
+
+.navbar-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+.navbar-container .div-input-search {
+  width: 25%;
 }
 
 /* scrollbar width */
@@ -68,7 +79,7 @@
   margin-bottom: 2vh;
 }
 #chat-main-div .col .chat-div-titles .chat-titles {
-  font: bold italic small-caps 2.5vw "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font: small-caps 2.5vw fantasy, "Gill Sans", "Calibri", sans-serif;
   margin: 2vh 0 0 0;
 }
 #chat-main-div .col #chat-div-chat #chat-div-messages {
