--- a/project2/static/css/base.css
+++ b/project2/static/css/base.css
@@ -1,3 +1,13 @@
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
 #body {
   background-color: #0f0627;
   font-family: fantasy;
