--- a/project2/templates/logged/chat.html
+++ b/project2/templates/logged/chat.html
@@ -22,8 +22,8 @@ Chat
                 <p>Body</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Agregar a contactos</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Mandar mensaje</button>
+                <button id="modal-userData-btnContact" class="btn-flat" data-dismiss="modal" style="display:none;"></button>
+                <button id="modal-userData-btnChat" class="btn-flat btn-flat-primary" data-dismiss="modal">Chat</button>
             </div>
         </div>
     </div>
