--- a/project2/static/css/chat.scss
+++ b/project2/static/css/chat.scss
@@ -20,7 +20,7 @@ $color-div-user-active: base.$color-primary-soft;
             margin-bottom: 2vh;
 
             .chat-titles {
-                font: small-caps 2.5vw fantasy, "Gill Sans", "Calibri", sans-serif;
+                font: 2.5vw fantasy, "Gill Sans", "Calibri", sans-serif;
                 margin: 2vh 0 0 0;
             }
         }
