--- a/project2/static/css/base.css
+++ b/project2/static/css/base.css
@@ -38,7 +38,7 @@
   border: thick;
   border-radius: 5px;
   color: #ffffff;
-  font-size: 100%;
+  font: 1.6vw fantasy;
 }
 
 .btn-flat-primary {
@@ -54,7 +54,7 @@
 }
 
 .flat-title {
-  font: small-caps 3vw fantasy, "Gill Sans", "Calibri", sans-serif;
+  font: 3vw fantasy, "Gill Sans", "Calibri", sans-serif;
 }
 
 .div-input {
