--- a/project2/static/css/base.scss
+++ b/project2/static/css/base.scss
@@ -4,6 +4,11 @@ $color-primary-soft: rgba(18, 212, 147, 0.5);
 $color-secondary: rgb(238, 196, 8);
 $btn-fontColor: #ffffff;
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 @keyframes animatetop {
     from {
         top: -300px;
@@ -45,7 +50,7 @@ $btn-fontColor: #ffffff;
     border: thick;
     border-radius: 5px;
     color: $btn-fontColor;
-    font: 1.6vw fantasy;
+    font: 16px fantasy;
 }
 
 .btn-flat-primary {
@@ -73,15 +78,77 @@ $btn-fontColor: #ffffff;
     }
 }
 
-.navbar-container {
-    width: 100%;
+.input-form {
+    border: thin solid $color-secondary;
+    border-radius: 8px;
+    padding-left: 2%;
+    outline: none;
+    background-color: $color-primary-soft;
+}
+.input-form:focus {
+    border: medium solid $color-secondary;
+}
+// .navbar-container {
+//     width: 100%;
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: flex-end;
+// }
+
+.toogle-options {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    align-items: center;
+    width: 90%;
+    // padding: 2%;
+}
+
+.toggler-area {
+    display: none;
+    width: 100%;
+    align-items: center;
+    // justify-content: right;
+
+    .toggler-options-arrow {
+        display: none;
+        // right: 2%;
+    }
+
+    .expand-options-arrow {
+        content: url('https://img.icons8.com/nolan/40/expand-arrow.png');
+    }
+
+    .collapse-options-arrow {
+        content: url('https://img.icons8.com/nolan/40/collapse-arrow.png');
+    }
+
+    :hover {
+        cursor: pointer;
+        -ms-transform: scale(1.08); /* IE 9 */
+        -webkit-transform: scale(1.08); /* Safari */
+        transform: scale(1.08);
+    }
+}
+
+.toggler-content {
+    width: 100%;
+}
+
+.expand {
+    // display: block !important;
+    display: block;
 }
 
 .div-input-search {
-    width: 25%;
+    width: 80%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+
+    #input-search-users {
+        width: 100%;
+        position: absolute;
+        right: 0;
+    }
 }
 
 /* scrollbar width */
@@ -104,4 +171,76 @@ $btn-fontColor: #ffffff;
 /* scrollbar Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background-color: rgba(247, 250, 250, 1);
+}
+
+// > 1024px
+@media screen and (min-width: 1024px) {
+    .btn-flat {
+        padding: 1vh 2vw;
+        letter-spacing: 1.5px;
+    }
+    .toggler-area {
+        display: none;
+
+        .toggler-options-arrow {
+            display: none;
+        }
+        .expand-options-arrow {
+            content: url('https://img.icons8.com/nolan/40/expand-arrow.png');
+        }
+        .collapse-options-arrow {
+            content: url('https://img.icons8.com/nolan/40/collapse-arrow.png');
+        }
+    }
+    .toggler-content {
+        display: block;
+    }
+}
+// < 1024px
+@media screen and (max-width: 1024px) {
+    .btn-flat {
+        padding: 1vh 2.5vw;
+        letter-spacing: 1.4px;
+    }
+    .toggler-area {
+        display: none;
+
+        .toggler-options-arrow {
+            display: none;
+        }
+        .expand-options-arrow {
+            content: url('https://img.icons8.com/nolan/30/expand-arrow.png');
+        }
+
+        .collapse-options-arrow {
+            content: url('https://img.icons8.com/nolan/30/collapse-arrow.png');
+        }
+    }
+    .toggler-content {
+        display: block;
+    }
+}
+// < 768px
+@media screen and (max-width: 768px) {
+    .btn-flat {
+        padding: 1vh 3vw;
+        letter-spacing: 1.3px;
+    }
+    .toggler-area {
+        display: block;
+
+        .toggler-options-arrow {
+            display: block;
+        }
+        .expand-options-arrow {
+            content: url('https://img.icons8.com/nolan/20/expand-arrow.png');
+        }
+
+        .collapse-options-arrow {
+            content: url('https://img.icons8.com/nolan/20/collapse-arrow.png');
+        }
+    }
+    .toggler-content {
+        display: none;
+    }
 }
