--- a/project2/static/css/chat.css
+++ b/project2/static/css/chat.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 @keyframes animatetop {
   from {
     top: -300px;
@@ -38,7 +43,7 @@
   border: thick;
   border-radius: 5px;
   color: #ffffff;
-  font-size: 100%;
+  font: 16px fantasy;
 }
 
 .btn-flat-primary {
@@ -65,15 +70,64 @@
   font-weight: bold;
 }
 
-.navbar-container {
-  width: 100%;
+.input-form {
+  border: thin solid #eec408;
+  border-radius: 8px;
+  padding-left: 2%;
+  outline: none;
+  background-color: rgba(18, 212, 147, 0.5);
+}
+
+.input-form:focus {
+  border: medium solid #eec408;
+}
+
+.toogle-options {
   display: flex;
-  flex-direction: row;
   justify-content: flex-end;
+  align-items: center;
+  width: 80%;
+  padding: 2%;
+}
+
+.toggler-area {
+  display: none;
+  width: 100%;
+  height: 100%;
+}
+.toggler-area .toggler-options-arrow {
+  display: none;
+  right: 2%;
+}
+.toggler-area .expand-options-arrow {
+  content: url("https://img.icons8.com/nolan/40/expand-arrow.png");
+}
+.toggler-area .collapse-options-arrow {
+  content: url("https://img.icons8.com/nolan/40/collapse-arrow.png");
+}
+.toggler-area :hover {
+  cursor: pointer;
+  -ms-transform: scale(1.08);
+  /* IE 9 */
+  -webkit-transform: scale(1.08);
+  /* Safari */
+  transform: scale(1.08);
+}
+
+.toggler-content {
+  width: 100%;
+  padding: 0;
+}
+
+.expand {
+  display: block !important;
 }
 
 .div-input-search {
-  width: 25%;
+  width: 98%;
+}
+.div-input-search #input-search-users {
+  width: 98%;
 }
 
 /* scrollbar width */
@@ -98,6 +152,75 @@
   background-color: #f7fafa;
 }
 
+@media screen and (min-width: 1024px) {
+  .btn-flat {
+    padding: 1vh 2vw;
+    letter-spacing: 1.5px;
+  }
+
+  .toggler-area {
+    display: none;
+  }
+  .toggler-area .toggler-options-arrow {
+    display: none;
+  }
+  .toggler-area .expand-options-arrow {
+    content: url("https://img.icons8.com/nolan/40/expand-arrow.png");
+  }
+  .toggler-area .collapse-options-arrow {
+    content: url("https://img.icons8.com/nolan/40/collapse-arrow.png");
+  }
+
+  .toggler-content {
+    display: block;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .btn-flat {
+    padding: 1vh 2.5vw;
+    letter-spacing: 1.4px;
+  }
+
+  .toggler-area {
+    display: none;
+  }
+  .toggler-area .toggler-options-arrow {
+    display: none;
+  }
+  .toggler-area .expand-options-arrow {
+    content: url("https://img.icons8.com/nolan/30/expand-arrow.png");
+  }
+  .toggler-area .collapse-options-arrow {
+    content: url("https://img.icons8.com/nolan/30/collapse-arrow.png");
+  }
+
+  .toggler-content {
+    display: block;
+  }
+}
+@media screen and (max-width: 768px) {
+  .btn-flat {
+    padding: 1vh 3vw;
+    letter-spacing: 1.3px;
+  }
+
+  .toggler-area {
+    display: flex;
+  }
+  .toggler-area .toggler-options-arrow {
+    display: block;
+  }
+  .toggler-area .expand-options-arrow {
+    content: url("https://img.icons8.com/nolan/20/expand-arrow.png");
+  }
+  .toggler-area .collapse-options-arrow {
+    content: url("https://img.icons8.com/nolan/20/collapse-arrow.png");
+  }
+
+  .toggler-content {
+    display: none;
+  }
+}
 #chat-main-div {
   padding: 1vh 1vw 1vh 1vw;
   border: 2px solid #eec408;
@@ -123,7 +246,7 @@
   border-radius: 10px;
 }
 #chat-main-div .col #chat-div-chat #chat-div-messages #chat-div-messages-navbar {
-  background-color: #0f0627;
+  background-color: #e0f1f1;
 }
 #chat-main-div .col #chat-div-chat #chat-div-messages #chat-div-messages-inside {
   background-color: #0d0523;
